--- a/style.css
+++ b/style.css
@@ -9,8 +9,35 @@
 }
 
 .side_bar{
-    background-color: red;
+    
     width: 25%;
+    padding: 5px 5px;
+  
+}
+
+.side_bar a{
+    text-decoration: none;
+    color: white;
+    display: block;
+    
+
+
+}
+
+.side_bar .side_panel {
+    width: 100%;
+    height: 24vh;
+    background-color: #121212;
+    padding: 5px;
+    margin: 2px 2px;
+    border-radius: 5%;
+}
+
+.side_bar .side_library{
+    height: 74vh;
+    width: 100%;
+    background-color:#121212;
+    border-radius: 5%;
 }
 
 .main{
